unpackaged/main/default/objects/Consultation__c/fields/Cout__c.field-meta.xml
<CustomField>
    <fullName>Cout__c</fullName>
    <label>Coût</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>