unpackaged/main/default/objects/Consultation__c/fields/Date_contractualisation__c.field-meta.xml
<CustomField>
    <fullName>Date_contractualisation__c</fullName>
    <label>Date contractualisation</label>
    <type>Date</type>
</CustomField>