unpackaged/main/default/objects/Consultation__c/fields/Date_limite_reception_offres__c.field-meta.xml
<CustomField>
    <fullName>Date_limite_reception_offres__c</fullName>
    <label>Date limite réception offres</label>
    <type>Date</type>
</CustomField>