unpackaged/main/default/objects/Consultation__c/fields/Date_reponse_accord__c.field-meta.xml
<CustomField>
    <fullName>Date_reponse_accord__c</fullName>
    <label>Date réponse accord</label>
    <type>Date</type>
</CustomField>