unpackaged/main/default/objects/Consultation__c/fields/Delai__c.field-meta.xml
<CustomField>
    <fullName>Delai__c</fullName>
    <label>Délai (Jours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>