unpackaged/main/default/objects/Consultation__c/fields/Delai_de_paiements_Jours__c.field-meta.xml
<CustomField>
    <fullName>Delai_de_paiements_Jours__c</fullName>
    <label>Délai de paiements (Jours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>