unpackaged/main/default/objects/Consultation__c/fields/Legislation_Norme__c.field-meta.xml
<CustomField>
    <fullName>Legislation_Norme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Législation / Norme</label>
    <type>Checkbox</type>
</CustomField>