unpackaged/main/default/objects/Consultation__c/fields/Standardisation_Groupe__c.field-meta.xml
<CustomField>
    <fullName>Standardisation_Groupe__c</fullName>
    <label>Standardisation Groupe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>Partiel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>