unpackaged/main/default/objects/Consultation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>RFQ</fullName>
            </value>
            <value>
                <fullName>AO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>