unpackaged/main/default/objects/Consultation__c/fields/Type_affaire__c.field-meta.xml
<CustomField>
    <fullName>Type_affaire__c</fullName>
    <label>Type affaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>